finish zilter page, add relevant links section

--- a/caida.html
+++ b/caida.html
@@ -12,7 +12,7 @@
   </script>
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>UX Developer Internship</title>
+  <title>CAIDA Internship</title>
   <link rel="shortcut icon" type="image/png" href="assets/favicon.png">
   <link rel="stylesheet" type="text/css" href="style/workStyle.css">
   <link rel="stylesheet" type="text/css" href="style/sharedStyle.css">
@@ -40,14 +40,16 @@
       <div id="valign-div">
         <div class="heading-container">
           <div>
-            <p id="work-title">UX Developer Internship</p>
+            <p id="work-title">CAIDA Internship</p>
             <div class="inline-div" style="padding-right: 4.5vw">
               <p id="work-header">Timeline</p>
+              <p id="work-header">Role</p>
               <p id="work-header">Teammate</p>
               <p id="work-header">Supervisor</p>
             </div>
             <div class="inline-div">
               <p id="work-value">July 2018 — September 2018</p>
+              <p id="work-value">UX Developer</p>
               <p id="work-value">J. Chan</p>
               <p id="work-value">R. Mok</p>
             </div>
@@ -57,17 +59,25 @@
     </div>
 
     <div class="body-container">
+      <div><p id="body-header">Relevant Links</p></div>
+      <div>
+        <p>CAIDA  — <a id="link" href="http://www.caida.org/home/">http://www.caida.org/home/</a></p>
+        <p>QUINCE — <a id="link" href="https://crowdtrace.caida.org/">https://crowdtrace.caida.org/</a> (Link may be unavailable for research is done periodically)</p>
+      </div>
+    </div>
+
+    <div class="body-container">
       <div class="grid"><div><p id="body-header">Tools + Skills</p></div></div>
       <div class="grid">
-        <p class="line-height-210">— HTML, CSS, JavaScript, Bootstrap, Meteor web framework, Git</p>
-        <p class="line-height-210">— Web Application Development, User Interface, Front-End Design</p>
+        <p>— HTML, CSS, JavaScript, Bootstrap, Meteor web framework, Git</p>
+        <p>— Web Application Development, User Interface, Front-End Design</p>
       </div>
     </div>
 
     <div class="body-container">
       <div class="grid"><div><p id="body-header">Description</p></div></div>
       <div class="grid">
-        <p class="line-height-210">For the Summer of 2018, I served as a UX Developer for a web 
+        <p>For the Summer of 2018, I served as a UX Developer for a web 
            platform called QUINCE, an abbreviation for the lengthy title: Quality 
            of Internet Consumer Experience. This platform enables end-users to 
            easily participate in various internet measurement tasks. Participants can,
@@ -79,7 +89,7 @@
     <div class="body-container">
       <div class="grid"><div><p id="body-header">Responsibility</p></div></div>
       <div class="grid">
-        <p class="line-height-210">Under the supervision of Ricky, I helped design and develop the web 
+        <p>Under the supervision of Ricky, I helped design and develop the web 
            platform to increase participant engagement. Naturally, I spent some
            time researching effective ways to gamify measurement tasks so that 
            they would appeal more to paricipants. As for the visual side, I 
@@ -94,7 +104,7 @@
     <div class="impact-container">
       <div class="grid"></div>
       <div class="grid caption">
-        <p class="line-height-210">The consent form is the first thing participants see when accessing 
+        <p>The consent form is the first thing participants see when accessing 
            the web platform. The form was expanded vertically to cover a larger
            area of the screen than before and a shadow was placed at the bottom
            of the form to indicate that there is scroll functionality. At a 
@@ -107,7 +117,7 @@
     <div class="impact-container">
         <div class="grid"></div>
         <div class="grid caption">
-          <p class="line-height-210">The tutorial modal window introduces participants to the interface 
+          <p>The tutorial modal window introduces participants to the interface 
              and what their jobs are. Originally, the window was much larger to 
              accomodate a bulkier logo and the oversized font. The redesign 
              lessened font size and inserted helpful paragraph spacing. The logo 
@@ -120,7 +130,7 @@
     <div class="impact-container">
       <div class="grid"></div>
       <div class="grid caption">
-        <p class="line-height-210">I designed and implemented the onboarding process that includes the 
+        <p>I designed and implemented the onboarding process that includes the 
            sign-in, sign-up, and forgot password screens. I also conceptualized 
            this design with the other modal windows in mind. I chose a deep 
            green to symbolize the currency that participants may earn through 
@@ -132,7 +142,7 @@
     <div class="impact-container">
       <div class="grid"></div>
       <div class="grid caption">
-        <p class="line-height-210">In order to implement a subtle yet immersive, interactive US map, I 
+        <p>In order to implement a subtle yet immersive, interactive US map, I 
            dug into amCharts, a JavaScript charting and mapping library, to 
            tweak changes within the code. The result is a seamless experience 
            between interacting with the map and visualizing geographical 
@@ -145,7 +155,7 @@
     <div class="conclusion-container">
       <div class="grid"><div><p id="body-header">Conclusion + Takeaways</p></div></div>
       <div class="grid">
-        <p class="line-height-210">Starting off at the internship was a little rough: I had to become 
+        <p>Starting off at the internship was a little rough: I had to become 
           familiar with Meteor, get certain dependencies installed on my 
           computer, join services for communication with the team, attain 
           access for special privileges, etc. <br/> <br/>
@@ -165,7 +175,7 @@
     </div>
 
     <div id="footer">
-      <p id="copyright">© 2019 Andrew Zhen All Rights Reserved</p>
+      <p id="copyright">© 2019 Andrew Zhen</p>
       <p id="note">Built From The Ground Up</p>
       <div style="clear: both"></div>
     </div>
