--- a/snaash.html
+++ b/snaash.html
@@ -59,17 +59,25 @@
     </div>
 
     <div class="body-container">
+      <div><p id="body-header">Relevant Links</p></div>
+      <div>
+        <p>Figma Prototype — <a id="link" href="https://www.figma.com/proto/aJfKEHFtXRR1LHoABX9iPU/Snaash?node-id=250%3A987&viewport=-2234%2C550%2C0.514568&scaling=scale-down">Answerer Interface (Ages 50 and Up)</a></p>
+        <p>Figma Prototype — <a id="link" href="https://www.figma.com/proto/aJfKEHFtXRR1LHoABX9iPU/Snaash?node-id=250%3A1207&viewport=-2234%2C550%2C0.514568&scaling=scale-down">Asker Interface (All Ages)</a></p>
+      </div>
+    </div>
+
+    <div class="body-container">
       <div><p id="body-header">Tools + Skills</p></div>
       <div>
-        <p class="line-height-210">— Figma</p>
-        <p class="line-height-210">— Need Finding, Information Architecture, Prototyping, Competitive Analysis</p>
+        <p>— Figma</p>
+        <p>— Need Finding, Information Architecture, Prototyping, Competitive Analysis</p>
       </div>
     </div>
 
     <div class="body-container">
       <div><p id="body-header">Description</p></div>
       <div>
-        <p class="line-height-210">For a web design course spanning 5 weeks, our team was tasked with 
+        <p>For a web design course spanning 5 weeks, our team was tasked with 
            designing and prototyping an accessible web application to accomodate 
            the lifestyles of people who are aged 50 and up. Our idea-turned 
            product would then participate in a Shark Tank, entrepreneur-themed 
@@ -80,21 +88,21 @@
 
     <div class="impact-container">
       <div></div>
-      <div><img src="assets/snaash/sharktank.jpg" style="filter: grayscale(0%); width: 80%"></div>
       <div class="caption quote">
-        <p class="line-height-210"><i><span style="font-size: 3vw">“ </span>SNAASH is bridging the gap between generations. The elderly can 
+        <p><i>“SNAASH is bridging the gap between generations. The elderly can 
            share advice with those who need it and the young ones can ask for 
            guidance. Through their app, you’re able to post a question and 
            receive a thoughtful voice response from someone who may have 
            experienced it before. ” </i><br/><br/>
            — Shark Tank: COGS 187A Edition</p>
       </div>
+      <div style="text-align: center;"><img src="assets/snaash/sharktank.jpg" style="filter: grayscale(0%); width: 60%"></div>
     </div>
 
     <div class="body-container">
       <div><p id="body-header">Responsibility</p></div>
       <div>
-        <p class="line-height-210">Given the broad prompt of creating a digital 
+        <p>Given the broad prompt of creating a digital 
            tool for a population of elders, my initial contribution was helping 
            narrow our thoughts to a more focused concept: </p>
       </div>
@@ -104,7 +112,7 @@
       <div></div>
       <div>
         <p class="subheader snaash-subheader">Need Finding</p>
-        <p class="line-height-210">I felt that older generations needed a way 
+        <p>I felt that older generations needed a way 
            to keep up-to-date with younger generations in terms of culture, 
            trends, etc. For example, grandparents have a difficult time trying 
            to understand how their grandchildren are feeling and what they 
@@ -129,7 +137,7 @@
     <div class="body-container">
       <div class="work-header"></div>
       <div>
-        <p class="line-height-210">To summarize, the key challenges that we faced were: <br/>
+        <p>To summarize, the key challenges that we faced were: <br/>
            — helping the elderly stay connected socially <br/>
            — making communication personal and genuine in a digital world <br/>
            — finding a safe and secure platform for anyone to ask real-life, personal questions</p>
@@ -140,7 +148,7 @@
       <div></div>
       <div>
         <p class="subheader snaash-subheader">Information Architecture</p>
-        <p class="line-height-210">With our advice-giving idea in mind, we set out to outline the 
+        <p>With our advice-giving idea in mind, we set out to outline the 
            information architecture, first with post-it notes then digitally 
            with more detail. We determined that we would build for mobile 
            rather than for desktop because of the prevalence of mobile devices 
@@ -152,7 +160,7 @@
     <div class="impact-container">
       <div></div>
       <div class="caption">
-        <p class="line-height-210">Originally at the bottom navigation bar, we had a profile tab, a 
+        <p>Originally at the bottom navigation bar, we had a profile tab, a 
            home tab that leads to the feed of questions, and an ask tab (all in 
            the color blue in the image to the right). We also cared to include 
            functions such as bookmarks and history since these convenient 
@@ -172,7 +180,7 @@
       <div></div>
       <div>
         <p class="subheader snaash-subheader">Prototyping</p>
-        <p class="line-height-210">After reviewing what was outlined, we decided we wanted to keep only 
+        <p>After reviewing what was outlined, we decided we wanted to keep only 
            what was essential in order to meet usability standards as well as 
            create a streamlined user experience, especially for 50+ aged folks.
            <br/><br/>
@@ -186,7 +194,7 @@
     <div class="impact-container">
       <div></div>
       <div class="caption">
-        <p class="line-height-210">We first conducted user testing on paper prototypes, a collection of 
+        <p>We first conducted user testing on paper prototypes, a collection of 
            each group members’ low-fidelity mock-ups. We focused our critiques 
            on the layout of the interface and the logical flow of user interactions.
            <br/><br/>
@@ -218,8 +226,7 @@
       <div></div>
       <div>
         <p class="subheader snaash-subheader">Competitive Analysis</p>
-        <p class="line-height-210">There already 
-           exists a few options for places that provide advice. Our most 
+        <p>There already exists a few options for places that provide advice. Our most 
            notable competitors include Quora, Reddit, and Yahoo Answers. Taking 
            a closer look at the competition, we singled each one out and 
            summarized Snaash’s advantages over them:</p> <br/> <br/>
@@ -229,16 +236,18 @@
     <div class="ca-container">
       <div></div>
       <div><img src="assets/snaash/quora.png"></div>
-      <div></div>
-    </div>
-    <br/>
-    <div class="body-container">
+      <div class="notable-features">
+        <p><span class="ca-title">Notable Features</span> <br/>
+           — Accountability and Maturity <br/>
+           — “BNBR (Be Nice Be Respectful)” Policy
+        </p>
+      </div>
+    </div> <br/>
+
+    <div class="body-container" style="margin-bottom: 10vw">
       <div></div>
       <div>
-        <p class="line-height-210"><span class="ca-title">Notable Features:</span> <br/>
-           — Accountability and Maturity <br/>
-           — “BNBR (Be Nice Be Respectful)” Policy</p> <br/>
-        <p class="line-height-210"><span class="ca-title">Comments:</span> <br/>
+        <p><span class="ca-title">Comments</span> <br/>
            One complaint is that some Quora users can be immature because there 
            is no restriction on who can ask/answer questions (besides having an 
            account). By enforcing an age restriction on who can answer questions, 
@@ -254,17 +263,19 @@
     <div class="ca-container">
       <div></div>
       <div><img src="assets/snaash/yahoo.png"></div>
-      <div></div>
-    </div>
-    <br/>
-    <div class="body-container">
-      <div></div>
-      <div>
-        <p class="line-height-210"><span class="ca-title">Notable Features:</span> <br/>
+      <div class="notable-features">
+        <p><span class="ca-title">Notable Features</span> <br/>
            — Semi-Anonymity through Usernames <br/>
            — Outdated yet Minimal Design <br/>
-           — Pay (“give gold”) to Unlock Features</p> <br/>
-        <p class="line-height-210"><span class="ca-title">Comments:</span> <br/>
+           — Pay (“give gold”) to Unlock Features
+        </p>
+      </div>
+    </div> <br/>
+
+    <div class="body-container" style="margin-bottom: 10vw">
+      <div></div>
+      <div>
+        <p><span class="ca-title">Comments</span> <br/>
            Though usernames are semi-anonymous, post/comment history is 
            available to anyone. On Snaash, we want to keep the confidentiality 
            of users who post questions seeking advice. Reddit also allows users 
@@ -276,17 +287,19 @@
     <div class="ca-container">
       <div></div>
       <div><img id="reddit" src="assets/snaash/reddit-dark.png"></div>
-      <div></div>
-    </div>
-    <br/>
-    <div class="body-container">
-      <div></div>
-      <div>
-        <p class="line-height-210"><span class="ca-title">Notable Features:</span> <br/>
+      <div class="notable-features">
+        <p><span class="ca-title">Notable Features</span> <br/>
            — Link all Activity back to User <br/>
            — Anonymity through Nickname <br/>
-           — Questions have Opening and Closing Period</p> <br/>
-        <p class="line-height-210"><span class="ca-title">Comments:</span> <br/>
+           — Questions have Opening and Closing Period
+        </p> <br/>
+      </div>
+    </div> <br/>
+
+    <div class="body-container" style="margin-bottom: 10vw">
+      <div></div>
+      <div>
+        <p><span class="ca-title">Comments</span> <br/>
            Yahoo has a feature of linking all activity back to its user, which 
            the user can delete during a temporary window of time. A user can be 
            anonymous to the public through a nickname but any activity is still 
@@ -300,17 +313,19 @@
     <div class="ca-container">
       <div></div>
       <div><img src="assets/snaash/snaash.png"></div>
-      <div></div>
-    </div>
-    <br/>
-    <div class="body-container">
-      <div></div>
-      <div>
-        <p class="line-height-210"><span class="ca-title">Notable Features:</span> <br/>
+      <div class="notable-features">
+        <p><span class="ca-title">Notable Features</span> <br/>
            — Complete Anonymity <br/>
            — Age Restriction for Respondants <br/>
-           — Voice Answers</p> <br/>
-        <p class="line-height-210"><span class="ca-title">Comments:</span> <br/>
+           — Voice Answers
+        </p> <br/>
+      </div>
+    </div> <br/>
+
+    <div class="body-container" style="margin-bottom: 10vw">
+      <div></div>
+      <div>
+        <p><span class="ca-title">Comments</span> <br/>
            Snaash allows users to ask questions to a qualified group of elders 
            without having their profie revealed. Snaash borrows a feature from 
            other competitors: a voting system where the best answers can be 
@@ -321,7 +336,7 @@
       </div>
     </div>
 
-    <div class="body-container">
+    <div class="body-container" style="margin-bottom: 10vw">
       <div></div>
       <div><img src="assets/snaash/competitive-analysis.jpg"></div>
     </div>
@@ -344,7 +359,7 @@
     <div class="conclusion-container" style="margin-bottom: 3vw">
       <div><p id="body-header">Conclusion + <br/>Takeaways</p></div>
       <div>
-        <p class="line-height-210">Socializing and keeping in touch with 
+        <p>Socializing and keeping in touch with 
            friends and family is key to a longer, happier life. For our older 
            generation, we have identified that they could improve in this area. 
            As for the younger audiences, we understood that they valued 
@@ -365,15 +380,15 @@
       <div></div>
       <div>
         <p class="subheader snaash-subheader">Future Plans</p>
-        <p class="line-height-210">Given a chance to bring Snaash to life, we 
-           would need financing to pay for a team of software developers to 
-           develop the application. In addition, we would need to find a way to 
-           verify the age of those 50 and up to avoid wrongful use of the application.</p>
+        <p>Given a chance to bring Snaash to life, we would need financing to 
+           pay for a team of software developers to develop the application. In 
+           addition, we would need to find a way to verify the age of those 50 
+           and up to avoid wrongful use of the application.</p>
       </div>
     </div>
 
     <div id="footer">
-      <p id="copyright">© 2019 Andrew Zhen All Rights Reserved</p>
+      <p id="copyright">© 2019 Andrew Zhen</p>
       <p id="note">Built From The Ground Up</p>
       <div style="clear: both"></div>
     </div>
