--- a/zilter.html
+++ b/zilter.html
@@ -59,73 +59,292 @@
     </div>
 
     <div class="body-container">
+      <div><p id="body-header">Relevant Links</p></div>
+      <div>
+        <p>Website — <a id="link" href="https://zilterproject.github.io/">https://zilterproject.github.io/</a></p>
+        <p>GitHub Repository — <a id="link" href="https://github.com/zilterproject/zilterproject.github.io">https://github.com/zilterproject/zilterproject.github.io</a></p>
+      </div>
+    </div>
+
+    <div class="body-container">
       <div><p id="body-header">Tools + Skills</p></div>
       <div>
-        <p class="line-height-210">— HTML, CSS, Figma</p>
-        <p class="line-height-210">— Interaction Design, Visual Design, Need Finding, Prototyping</p>
+        <p>— HTML, CSS, Git, Figma</p>
+        <p>— Interaction Design, Need Finding, Prototyping</p>
       </div>
     </div>
 
     <div class="body-container">
       <div><p id="body-header">Description</p></div>
       <div>
-        <p class="line-height-210">The goal of this project was to focus on 
+        <p>The goal of this course was to focus on 
            hands-on practice with a modern human-centered design process while 
-           building a web application to serve a set of target users. The way 
-           we materialized this goal was via an web application concept that 
-           aims to ease the shopping experience in its entirety by eliminating 
-           the need for users to conduct research on a product.</p> <br/>
-        <p class="line-height-210">Zilter’s sole purpose is to enhance the 
-           recreational activity of online shopping. Online shopping for 
-           entertainment gadgets and appliances (e.g. TVs, stereos, laptops, 
-           headphones) can be a tedious task, especially with all the research 
-           required to get the best product at the best price. This web app 
-           provides the user with all the information they need to make an 
-           informed decision: standard product information, photos, videos, and 
-           official reviews pulled from external websites. And as always, the 
-           sources are cited in a bibliography.</p>
+           building a web application to serve a set of target users. This 
+           project aims to enhance recreational activity.</p> <br/> <br/>
+        <p>The way we materialized this goal was via 
+           Zilter, a web application concept that eases the shopping experience 
+           by consolidating all product research into one convenient place.</p> <br/> <br/>
+        <p>Online shopping for gadgets and appliances 
+           (e.g. TVs, laptops, headphones) can be a tedious task given that you 
+           need to acquire information to get the best product at the best price. 
+           Specifically, Zilter provides standard product information, photos, 
+           videos and official reviews gathered from websites. The sources are 
+           cited in a bibliography.</p>
       </div>
     </div>
 
     <div class="body-container">
       <div><p id="body-header">Responsibility</p></div>
       <div>
-        <p class="line-height-210">My main role was to implement digital 
+        <p>My main role was to implement digital 
            mockups into user testable prototypes and in turn, present these to 
            an audience while delivering a pitch for our concept. I shared the 
            responsibility of performing user testing and turning feedback into 
-           thoughtful design tweaks. </p>
+           thoughtful design tweaks.</p>
       </div>
     </div>
 
     <div class="body-container">
       <div></div>
       <div>
+        <p class="subheader zilter-subheader">Need Finding</p>
+        <p>For the scope of our project to enhance recreation, our team decided 
+           to hone in on the opportunity to analyze breakdowns and design 
+           opportunities around the online shopping experience. <br/> <br/>
+
+           First, we conducted ad libitum sampling on three users in which the 
+           observer informally records all observations that are relevant or 
+           interesting. We simply asked the users to shop for an item online.</p>
+      </div>
+    </div>
+
+    <!-- User 1 — Kevin, 19 Years Old -->
+    <div class="body-container mb-2">
+      <div></div>
+      <div>
+        <p class="subheader">User 1 — Kevin, 19 Years Old</p>
+        <p>Kevin is a 3rd year biology student who enjoys cooking and needs a 
+           whetstone to sharpen his knives and a mesh strainer to filter and to 
+           clean his vegetables.</p>
+      </div>
+    </div>
+    <div class="impact-container">
+      <div></div>
+      <div class="caption">
+        <p>I noticed, while observing Kevin, that he needed a way to figure out 
+           if a product’s physical dimensions were right for him. Here, he uses 
+           the width of a paper to truly understand the diameter of a strainer. 
+           Although measurements were provided to him, he needed a way to compare 
+           it relative to himself. To us, this was a design opportunity to improve 
+           product expectations.</p>
+      </div>
+      <div><img src="assets/zilter/kevin.jpg"></div>
+    </div>
+
+
+    <!-- User 2 — Charles, 21 Years Old -->
+    <div class="body-container mb-2">
+      <div></div>
+      <div>
+        <p class="subheader">User 2 — Charles, 21 Years Old</p>
+        <p>Charles is a 4th year pre-law student who likes to browse and shop 
+           for clothes and high-fashion items online during his free time.</p>
+      </div>
+    </div>
+    <div class="impact-container mb-2">
+      <div></div>
+      <div><img src="assets/zilter/charles-1.jpg" style="padding-right: 1vw; width: 96%"></div>
+      <div style="text-align: right"><img src="assets/zilter/charles-2.jpg" style="padding-left: 1vw; width: 96%"></div>
+    </div>
+    <div class="body-container">
+      <div></div>
+      <div>
+        <p>After making an offer to a seller on Grailed, a marketplace website, 
+           Charles switches over to YouTube to watch videos on the item he was 
+           looking at on Grailed. Charles needs to make a better judgement of 
+           the item of interest while simultaneously shopping for it. What we 
+           took from this observation was that users often need external sources 
+           to help them make purchasing decisions.</p>
+      </div>
+    </div>
+
+
+    <!-- User 3 — Ariane, 20 Years Old -->
+    <div class="body-container mb-2">
+      <div></div>
+      <div>
+        <p class="subheader">User 3 — Ariane, 20 Years Old</p>
+        <p>Ariane is a 3rd year math-computer science student who likes to 
+           spend her free time browsing through online retail stores looking to 
+           see if any pieces catches her attention.</p>
+      </div>
+    </div>
+    <div class="impact-container">
+      <div></div>
+      <div class="caption">
+        <p>Ariane is browsing through a clothing website and wants to find the 
+           best deals. She sets the price filter from lowest to highest so that 
+           she is able to see the items that are on sale or at the best price 
+           first. This observation shows us that users want ways to filter 
+           through large quantities of products to find exactly what they are 
+           looking for. </p>
+      </div>
+      <div><img src="assets/zilter/ariane.jpg"></div>
+    </div>
+
+    <div class="body-container">
+      <div></div>
+      <div>
+        <p>In conclusion, after analyzing different users engage in online 
+           browsing and shopping, we have deduced that people want the best 
+           combination of quality and price. In order to meet this demand, we 
+           chose to play the role that informs users instead of markets to users. 
+           Essentially, we want to create the Wikipedia of shopping.</p>
+      </div>
+    </div>
+
+
+    <!-- Paper Sketches -->
+    <div class="body-container mb-0">
+      <div></div>
+      <div><p class="subheader zilter-subheader">Paper Sketches</p></div>
+    </div>
+    <div class="impact-container mb-2">
+      <div></div>
+      <div><img src="assets/zilter/paper-landing.jpg" style="padding-right: 1vw; width: 96%"></div>
+      <div style="text-align: right"><img src="assets/zilter/paper-filter.jpg" style="padding-left: 1vw; width: 96%"></div>
+    </div>
+    <div class="body-container">
+      <div></div>
+      <div>
+        <p>The initial ideation process includes a rough sketch of features we 
+           would like to eventually impement. The left image shows a very minimal 
+           landing page that is similar to a Google search. The right image shows 
+           a standard filtering functionality.</p>
+      </div>
+    </div>
+
+
+    <!-- Digital Wireframes -->
+    <div class="body-container mb-0">
+      <div></div>
+      <div><p class="subheader zilter-subheader">Digital Wireframes</p></div>
+    </div>
+    <div class="impact-container mb-2">
+      <div></div>
+      <div><img src="assets/zilter/wireframe-landing.jpg" style="padding-right: 1vw; width: 93%; outline: 1px solid black"></div>
+      <div style="text-align: right"><img src="assets/zilter/wireframe-filter.jpg" style="padding-left: 1vw; width: 93%; outline: 1px solid black"></div>
+    </div>
+    <div class="body-container">
+      <div></div>
+      <div>
+        <p>The second iteration of the web app concept is a wireframe that gives 
+           the general layout of its features. The left wireframe is the landing 
+           page that features popular items and latest items to be added onto 
+           Zilter. The right wireframe dispalys example filters for a vacuum.</p>
+      </div>
+    </div>
+
+
+    <!-- Working Prototypes -->
+    <div class="body-container mb-0">
+      <div></div>
+      <div><p class="subheader zilter-subheader">Working Prototypes</p></div>
+    </div>
+    <div class="impact-container mb-2">
+      <div></div>
+      <div><img src="assets/zilter/prototype-landing.png" style="padding-right: 1vw; width: 96%"></div>
+      <div style="text-align: right"><img src="assets/zilter/prototype-filter.png" style="padding-left: 1vw; width: 96%"></div>
+    </div>
+    <div class="body-container">
+      <div></div>
+      <div>
+        <p>The final iteration polishes the user interface by incorporating 
+           color, images and other visual detail. Functionality was also 
+           implemented to unite together the static web pages. </p>
+      </div>
+    </div>
+    <div class="impact-container mb-2">
+      <div></div>
+      <div><img src="assets/zilter/prototype-results.png" style="padding-right: 1vw; width: 96%"></div>
+      <div style="text-align: right"><img src="assets/zilter/prototype-product.png" style="padding-left: 1vw; width: 96%"></div>
+    </div>
+    <div class="body-container">
+      <div></div>
+      <div>
+        <p>Many websites used for product researching focus on a single aspect 
+           of information and do not include an array of necessary data to come 
+           to a decision. For example, Youtube presents videos and CNET is 
+           generally acknowledged for tech reviews but neither curate sources 
+           from other outlets. The concept of Zilter takes key components from 
+           all over the internet to curate the most relevant content for users 
+           to access on one platform. After filtering out specifics, users 
+           click on a result to see photos and all the technical specifications 
+           as well as critical reviews and videos that help them make the best choice.
+           <br/> <br/>
+           The working prototype can be accessed <a id="link" href="https://zilterproject.github.io/">here</a>.
+         </p>
+      </div>
+    </div>
+
+
+    <!-- Branding -->
+    <div class="body-container">
+      <div></div>
+      <div>
         <p class="subheader zilter-subheader">Branding</p>
-        <p class="line-height-210">The name was inspired by the physical 
-           functionality of a filter. Like a filter, we hope that our web app 
-           removes unwanted noise when trying to separate out important and 
-           non-important information.</p> <br/>
-        <p class="line-height-210">The black and gray color scheme was chosen 
+        <img src="assets/zilter/logo.png" style="display: block; margin: auto; width: 50%">
+        <p>The name was inspired by the physical functionality of a filter. 
+           Like a filter, we hope that our web app removes unwanted noise when 
+           trying to separate out important and non-important information.</p> <br/>
+        <p>The black and gray color scheme was chosen 
            to reflect the simplicity of our mission goal of making product 
-           purchases clear and straightforward. The focus of our site are the 
-           products themselves so minimal attention should go towards anything 
-           else. The green accents were infused to add a splash of color 
-           representing the excitement of making a purchase and also to build 
-           brand identity. Furthermore, the black and green combination is 
-           reminiscent of old school terminals which brings us to the new age 
-           of information that our web app presents. The Zilter logo accentuates 
-           the letter Z by shaping it into the silhouette of a lightning bolt 
-           which represents fast access to information at one’s fingertips that 
-           we hope to provide users in order to make an informed purchase.</p>
+           purchases straightforward. The focus of our site is the products 
+           themselves so minimal attention ought to go towards anything else. 
+           The green accents were infused to add a splash of color representing 
+           the excitement of making a purchase and to also build brand identity. 
+           Furthermore, the black and green combination is reminiscent of 
+           old-school computer terminals which then brings us to the new age of 
+           information that our web app presents. The Zilter logo accentuates 
+           the letter Z by shaping itself into the silhouette of a lightning 
+           bolt which symbolizes fast access to information at one’s fingertips 
+           that we hope to provide users in order to help them make an informed 
+           purchase.</p>
+      </div>
+    </div>
+
+    <div class="body-container">
+      <div><p id="body-header">Conclusion + Takeaways</p></div>
+      <div>
+        <p>Online shopping was a recreational activity that we wanted to enhance. 
+           To do this, we first had to understand what about shopping that could 
+           be improved on. After observing real people shop, we came up with a 
+           solution that bridges the gap between wanting a product and actually 
+           purchasing it: knowing which one to purchase. With this information 
+           hub, users can come with their questions and leave with a clear 
+           consumer intention.</p>
+      </div>
+    </div>
+    <div class="conclusion-container">
+      <div></div>
+      <div>
+        <p class="subheader zilter-subheader">Final Comments</p>
+        <p>We think that Zilter has been developed well enough for its concept 
+           to be understood. However, given the time and effort contraints of 
+           the course (10 weeks with 3 members), we feel that we have only 
+           carried out the beginning stages of the original vision.</p> <br/>
+        <p>We recognize the potential for improvement of many aspects of the 
+           current web app. Such areas include responsive web-design and user 
+           inferface.</p>
       </div>
     </div>
 
 
 
 
+
     <div id="footer">
-      <p id="copyright">© 2019 Andrew Zhen All Rights Reserved</p>
+      <p id="copyright">© 2019 Andrew Zhen</p>
       <p id="note">Built From The Ground Up</p>
       <div style="clear: both"></div>
     </div>
