--- a/about.html
+++ b/about.html
@@ -16,6 +16,9 @@
   <link rel="shortcut icon" type="image/png" href="assets/favicon.png">
   <link rel="stylesheet" type="text/css" href="style/aboutStyle.css">
   <link rel="stylesheet" type="text/css" href="style/sharedStyle.css">
+
+  <script src="jquery.js"></script>
+  <script src="fadein.js"></script>
 </head>
 <body id="body">
   <div class="content-margins">
@@ -36,9 +39,11 @@
       </div>
     </div>
 
-    <div>
+    <section>
       <div class="aboutPic"><img src="assets/portrait.jpg"></div>
+    </section>
 
+    <section>
       <div class="aboutArea">
         <div>
           <div class="about-subdivs">
@@ -78,7 +83,7 @@
         </div>
         <div></div>
       </div>
-    </div>
+    </section>
 
     <div id="contact">
       <ul>
@@ -91,7 +96,7 @@
     </div>
 
     <div id="footer">
-      <p id="copyright">© 2019 Andrew Zhen All Rights Reserved</p>
+      <p id="copyright">© 2019 Andrew Zhen</p>
       <p id="note">Built From The Ground Up</p>
       <div style="clear: both"></div>
     </div>
