--- a/long-term.html
+++ b/long-term.html
@@ -84,7 +84,7 @@
     </div>
 
     <div id="footer">
-      <p id="copyright">© 2019 Andrew Zhen All Rights Reserved</p>
+      <p id="copyright">© 2019 Andrew Zhen</p>
       <p id="note">Built From The Ground Up</p>
       <div style="clear: both"></div>
     </div>
