--- a/index.html
+++ b/index.html
@@ -87,10 +87,11 @@
       
       <div class="grid-item grid-item-right">
         <div class="grid-content">
-          <img src="assets/quickly/thumbnail-bw.jpg" class="no-transition">
-          <div class="coming-soon">Coming Soon</div>
+          <a href="https://ajzhen.com/quickly">
+            <img src="assets/quickly/thumbnail-bw.jpg">
+          </a>
         </div>
-        <p id="title" style="color: inherit;">Quickly Web App</p>
+        <p id="title">Quickly Web App</p>
         <p id="summary">Class-scheduling tool for UC San Diego students with punctual intent</p>
       </div>
     
