replace mymoney to todo, archive mymoney

--- a/index.html
+++ b/index.html
@@ -97,11 +97,11 @@
     
       <div class="grid-item">
         <div class="grid-content">
-          <img src="assets/mymoney/thumbnail-bw.jpg" class="no-transition">
+          <img src="assets/blank.png" class="no-transition">
           <div class="coming-soon">Coming Soon</div>
         </div>
-        <p id="title" style="color: inherit;">Finance Applet</p>
-        <p id="summary">Simple yet visually effective money tracker. Programmed in Python.</p>
+        <p id="title" style="color: inherit;">To-Do List Redesign</p>
+        <p id="summary">UI revamp of (Meteor web framework) Blaze-based application </p>
       </div>
 
       <div class="grid-item grid-item-right">
