--- a/long-term.html
+++ b/long-term.html
@@ -83,6 +83,25 @@
       <div class="grid" style="margin-bottom: 10vw"><img src="assets/long-term/smile.gif"></div>
     </div>
 
+    <div class="body-container-longterm">
+      <div class="grid">
+        <div class="project-info">
+          <p class="project-header">My Money</p>
+          <p class="line-height-160">
+             <span class="project-date">June 2018</span> <br/><br/>
+             Python <br/>
+             Python Libraries / Modules <br/>
+             Microsoft Excel <br/><br/>
+             Data Cleaning <br/>
+             Finance Tracking <br/><br/>
+             <b>GitHub Repository</b> <br/>
+             Coming Soon
+          </p>
+        </div>
+      </div>
+      <div class="grid" style="margin-bottom: 10vw"><img src="assets/long-term/mymoney.jpg"></div>
+    </div>
+
     <div id="footer">
       <p id="copyright">© 2019 Andrew Zhen</p>
       <p id="note">Built From The Ground Up</p>
