--- a/about.html
+++ b/about.html
@@ -50,13 +50,13 @@
             <p class="aboutHeader">Biography</p>
             <p class="about-p">Hey! I’m a third year undergraduate student studying Cognitive 
                Science (Design / Interaction concentration) at UC San Diego 🔱. </p>
-            <p class="about-p">Right now, I’m actively applying for UX Engineer and 
-               Designer intern positions for Summer '19.</p>
+            <p class="about-p">Right now, I’m actively applying for UX Developer and 
+               Designer intern positions for Summer 2019.</p>
           </div>
           
           <div class="about-subdivs">
             <p class="aboutHeader">Experience</p>
-            <p class="about-p">Previously, I’ve had the opportunities to work as a UX developer 
+            <p class="about-p">Previously, I’ve had the opportunities to work as a UX Developer 
                at <a href="http://www.caida.org/home/" id="work-1">CAIDA</a> and as a Data 
                Scientist at <a href="https://www.alphacorecap.com/" id="work-2">AlphaCore Capital</a> 
                before that.</p>
@@ -90,7 +90,7 @@
         <li><span id="email" onmouseover="mo('email')" onmouseleave="ml('email')">Email</span></li>
         <li><a href="assets/resume.pdf" id="resume" onmouseover="mo('resume')" onmouseleave="ml('resume')">Résumé</a></li>
         <li><a href="https://www.linkedin.com/in/andrew-zhen/" id="linkedin" onmouseover="mo('linkedin')" onmouseleave="ml('linkedin')">LinkedIn</a></li>
-        <li><a href="https://github.com/andrewzhen" id="github" onmouseover="mo('github')" onmouseleave="ml('github')">Github</a></li>
+        <li><a href="https://github.com/andrewzhen" id="github" onmouseover="mo('github')" onmouseleave="ml('github')">GitHub</a></li>
         <li><a href="https://www.instagram.com/a.jzhen/" id="instagram" onmouseover="mo('instagram')" onmouseleave="ml('instagram')">Instagram</a></li>
       </ul>
     </div>
