--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </script>
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Andrew Zhen</title>
+  <title>Andrew Zhen | UI UX</title>
   <link rel="shortcut icon" type="image/png" href="assets/favicon.png">
   <link rel="stylesheet" type="text/css" href="style/homeStyle.css">
   <link rel="stylesheet" type="text/css" href="style/sharedStyle.css">
@@ -26,7 +26,7 @@
   <div id="light-bg">
     <div class="content-margins">
       <div id="header">
-        <div id="name-div"><p id="name">andrew zhen</p></div>
+        <div id="name-div"><p id="name">Andrew Zhen</p></div>
 
         <div id="nav-div">
           <div class="nav sink"><a href="https://ajzhen.com/about" id="about" onmouseover="mo('about')" onmouseleave="ml('about')">About</a></div>
@@ -45,7 +45,7 @@
       <!-- <p id="description" class="hvr-bob">UX Engineer + Designer</p>
       <p id="description-2" class="hvr-bob">Currently a Design / Interaction Student at UC San Diego</p> -->
       
-      <p id="description">UX Engineer + Designer</p>
+      <p id="description">UX Developer + Designer</p>
       <p id="description-2">Currently a Design / Interaction Student at UC San Diego</p>
     </div>
 
@@ -121,7 +121,7 @@
         <li><span id="email" onmouseover="mo('email')" onmouseleave="ml('email')">Email</span></li>
         <li><a href="assets/resume.pdf" id="resume" onmouseover="mo('resume')" onmouseleave="ml('resume')">Résumé</a></li>
         <li><a href="https://www.linkedin.com/in/andrew-zhen/" id="linkedin" onmouseover="mo('linkedin')" onmouseleave="ml('linkedin')">LinkedIn</a></li>
-        <li><a href="https://github.com/andrewzhen" id="github" onmouseover="mo('github')" onmouseleave="ml('github')">Github</a></li>
+        <li><a href="https://github.com/andrewzhen" id="github" onmouseover="mo('github')" onmouseleave="ml('github')">GitHub</a></li>
         <li><a href="https://www.instagram.com/a.jzhen/" id="instagram" onmouseover="mo('instagram')" onmouseleave="ml('instagram')">Instagram</a></li>
       </ul>
     </div>
